# mysite_OCaml

./: README.md  dune-project  mysite_OCaml.opam
_esy/mysite_OCaml/cache/: project-14eb7f607293afbc46e2b37e528006ba
data/: bio.json  collaborators.json  conferences.json  cv.json  education.json  publications.json  skills.json  software.json  work_experience.json
lib/: collaborators_view.ml  conferences_view.ml  cv.ml  cv_data.ml  cv_view.ml  data_store.ml  dune  education_view.ml  experience_view.ml  home_view.ml  projects_view.ml  publications_view.ml  shared_view.ml  skills_view.ml  software_view.ml  work_view.ml
static/: style.css
static/css/: cv.css  detail.css  home.css  style.css
test/: dune
